<resources>
    <string name="app_name">Quiz App</string>
    <string name="quizapp">QuizApp!</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="start">START</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="Submit">SUBMIT</string>
    <string name="Finish">FINISH</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="result">Result</string>
</resources>