<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    android:background="@drawable/ic_bg">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:textSize="25dp"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="10dp"/>

    <ImageView
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:contentDescription="image"
        android:src="@drawable/ic_trophy" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hey_congratulations"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Prateek"
        android:layout_marginTop="20sp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="#D1CFCF"
        android:textSize="20sp"
        tools:text="Your score is 0 out of 9" />

    <Button
        android:id="@+id/FinalBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:text="@string/Finish"
        android:textColor="@color/white"
        android:textSize="18dp" />


</LinearLayout>